3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:
server/apply.c: changed the comparaison code between the weapon's name and the
    player's, so that a weapon created by "gro" cannot be used by "gros.
    Fix for bug #1539150
server/c_object.c: modifier command_take so it is less noisy about no_pick items
    when doing a "get all" request.
    Fix for bug #1539122
server/c_object.c: modified command_drop so it is less noisy about locked items
    when doing a "drop all" request.
    Fix for bug #1539121
server/pets.c: added filling of inventory for monsters magically created that
    didn't come from a player caster, and aren't golems.
    Fix for bug #1529980
server/spell_effect.c: fixed incorrect behavior of the create missile spell,
    that couldn't find a proper archetype when a bow or a crossbow was wielded.
    Fix for bug #1532403
Yann Chachkoff 2006-08-12

server/apply.c: keep converters from accepting unpaid items
Lalo 2006-08-12

lib/addexp: update help text.
server/c_wiz.c: update addexp's help text.
Ryo 2006-08-11

server/c_wiz.c: fix create command with some artifact fun. Update player inventory if removing
 an item.
Ryo 2006-08-10

server/apply.c: Tell the client the map has scrolled when applying transports. Fixes bug #1528565.
Alex Schultz 2006-08-10

lib/regions, common/region.c: Move regions file to map files.
server/player.c: Set default listen level to 10.
Alex Schultz 2006-08-09

common/loader.l, include/object.h, include/plugin.h, server/plugins.c: Add no_save attribute.
    Prevents object from being saved to disk. Add plugin support for the attribute.
plugins/cfpython/{cfpython.c, cfpython_object.c include/cfpython_object.h,