@@ -341,6 +341,7 @@ typedef struct mapdef {
     char    *tile_path[4];  /* path to adjoining maps */
     struct mapdef *tile_map[4];	/* Next map, linked list */
     char path[HUGE_BUF];	/* Filename of the map */
+    struct timeval last_reset_time; /* A timestamp of the last original map loading */
 } mapstruct;
 
 /* This is used by get_rangevector to determine where the other
