@@ -16,6 +16,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
+server/spell_effect.c, common/map.c, common/map.h: Added a field in the map
+    structure to store the timestamp of the last original map loading, and
+    modified the Town Portal spell so that it now cannot lead to a map that
+    was marked before a reset, after a reset.
+    Fix for bug #1539155
 server/apply.c: changed the comparaison code between the weapon's name and the
     player's, so that a weapon created by "gro" cannot be used by "gros.
     Fix for bug #1539150
